--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-currency-formatter": "^1.1.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.3.2",
+    "react-easy-chart": "^1.0.0",
     "react-scripts": "1.1.4",
     "react-table": "^6.8.2"
   },
