--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "big.js": "^5.1.2",
     "react": "^16.3.2",
     "react-currency-formatter": "^1.1.0",
     "react-currency-input": "^1.3.6",
